// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/SnackbarBase/Title should renders correctly with titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#353A45",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
        "lineHeight": 20,
        "minHeight": 20,
      },
      [
        {
          "flex": 1,
          "paddingRight": 8,
        },
        {
          "backgroundColor": "#000",
        },
      ],
    ]
  }
>
  title two
</Text>
`;

exports[`@lad-tech/mobydick-core/SnackbarBase/Title should renders correctly without titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFF",
        "fontFamily": "Inter-Medium",
        "fontSize": 12,
        "lineHeight": 16,
        "minHeight": 16,
      },
      [
        {
          "flex": 1,
          "paddingRight": 8,
        },
        {
          "flex": 1,
        },
      ],
    ]
  }
>
  title
</Text>
`;
